c/src/test/resources/c/nec_inline_bnc/valid/inf6b.ctrl
<controlFile>
  <sourceFile name="../inf6.c" id="1" />
  <run>
    <startPosition fileId="1" line="9" />
    <wayPoint fileId="1" line="15" />
    <wayPoint fileId="1" line="19" />
    <wayPoint fileId="1" line="28" />
    <wayPoint fileId="1" line="30" />
    <endPosition fileId="1" line="35" />
  </run>
</controlFile>