c/src/test/resources/c/nec_inline_bnc/invalid/ex18-10.ctrl
<controlFile>
  <sourceFile name="../ex18.c" id="1" />
  <run>
    <startPosition fileId="1" line="2" />
    <wayPoint fileId="1" line="15" >
      <loop iterTimes="10" />
    </wayPoint>
    <wayPoint fileId="1" line="18" />
    <wayPoint fileId="1" line="23" >
      <loop iterTimes="9" />
    </wayPoint>
    <endPosition fileId="1" line="28" />
  </run>
</controlFile>